--- a/Data-Modeling-with-Postgres/etl.ipynb
+++ b/Data-Modeling-with-Postgres/etl.ipynb
@@ -1125,7 +1125,7 @@
     "        songid, artistid = None, None\n",
     "\n",
     "    # insert songplay record\n",
-    "    songplay_data = (index, row.ts, row.userId, row.level,\\\n",
+    "    songplay_data = (row.ts, row.userId, row.level,\\\n",
     "                     songid, artistid,\\\n",
     "                     row.sessionId, row.location, row.userAgent)\n",
     "\n",
